# CryptoPatro

./: .env.template  .gitignore  CNAME  README.md  index.html  manifest.json  precache-manifest.100e69c1a38f3744c16fba979128b803.js  pyrightconfig.json  requirements.txt  service-worker.js
backend/: .env.template  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/adiutor/: __init__.py  asgi.py  celery_app.py  celery_config.py  settings.py  urls.py  wsgi.py
backend/adiutor/exchange/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py
backend/adiutor/exchange/migrations/: 0001_initial.py  0005_auto_20211011_0025.py  0006_portfolioasset_exchanged_amount.py  0010_auto_20211018_0049.py
backend/adiutor/telegram/: bot.py  utils.py
backend/adiutor/users/: admin.py  apps.py  models.py  urls.py  utils.py
backend/adiutor/users/migrations/: 0002_binanceauth.py  (+5 more)
backend/apps/: api.py  asgi.py  celery_app.py  celery_config.py  settings.py  types.py  urls.py  utils.py  wsgi.py
backend/apps/exchange/: admin.py  api.py  apps.py  models.py  schemas.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/users/: apps.py  models.py  permissions.py  urls.py
backend/aws/ecs/: rabbitmq-service.json  rabbitmq.json  task-definition.json
backend/aws/ssm/: secrets.json.template
backend/crypto-adiutor/: asgi.py  settings.py  urls.py  wsgi.py
backend/crypto-adiutor/exchange/: apps.py  models.py  serializers.py  urls.py  views.py
backend/crypto-adiutor/users/: apps.py  serializers.py  views.py
backend/cryptopatro/: __init__.py  api.py  asgi.py  auth.py  celery_app.py  celery_config.py  settings.py  types.py  urls.py  wsgi.py
backend/cryptopatro/exchange/: admin.py  api.py  apps.py  models.py  schemas.py  tasks.py
backend/cryptopatro/users/: admin.py  api.py  apps.py  models.py  schemas.py
backend/fixtures/: 0001_users.json  0002_assets.json  0003_exchange.json  0003_portfolio.json  users.json
backend/helm/: values.yaml
backend/helm/templates/: NOTES.txt  hpa.yaml
backend/k8s-helm/: Chart.yaml  values.yaml
backend/k8s-helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
backend/scripts/: startup_check.py
(+213 files in other folders)
