[project]
name = "cryptopatro"
version = "0.1.0"
description = "Personal portfolio tracker and trading assistant bot"
authors = [{ name = "Doruk Gezici", email = "doruk@gezici.me" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "binance-connector>=3.8.0",
    "celery>=5.4.0",
    "django-celery-beat>=2.6.0",
    "django-celery-results>=2.5.1",
    "django-cors-headers>=4.4.0",
    "django-ninja>=1.2.1",
    "psycopg2-binary>=2.9.9",
    "pillow>=10.4.0",
    "python-telegram-bot>=21.4",
    "sentry-sdk>=2.9.0",
    "uvicorn>=0.30.1",
    "whitenoise>=6.7.0",
    "django>=5.1.1",
]

# [project.scripts]
# dev = "uvicorn cryptopatro.asgi:application --host 0.0.0.0 --port 8000 --reload"
# lint = "ruff check"
# format = "ruff format"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryptopatro", "fixtures", "locale", "scripts"]
require-runtime-dependencies = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.5",
    "celery-types>=0.22.0",
    "django-stubs>=5.0.2",
    "django>=5.1.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
